--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   background-color: #f9f9f9;
-  color: #333;
+  color: ##4c6b23;
   margin: 0;
   padding: 20px;
   text-align: center;
