--- a/style1.css
+++ b/style1.css
@@ -26,6 +26,16 @@ features {
       background: #0b5dafff;
     }
 
+ .feature {
+      max-width: 300px;
+      background: white;
+      margin: 10px;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      text-align: center;
+    }
+
 /* Navigation bar styling */
 nav {
   background-color: #0077cc;
