--- a/style1.css
+++ b/style1.css
@@ -20,7 +20,7 @@ body {
   font-family: 'Merriweather', serif;
 }
 nav {
-  background-color: #0077cc;
+  background-color: #eeffc2;
   padding: 10px;
   margin-bottom: 20px;
 }
