--- a/style1.css
+++ b/style1.css
@@ -7,7 +7,7 @@ body {
   text-align: center;
 }
 .hero {
-  colour: #eeffc2;
+  background-colour: #eeffc2;
   padding: 60px 20px;
   text-align: center;
 }
