--- a/style1.css
+++ b/style1.css
@@ -51,7 +51,12 @@ features {
       box-shadow: 0 2px 5px rgba(0,0,0,0.1);
       text-align: center;
     }
-
+.feature img {
+        width: 650px;
+        height: 200px;
+        border-radius: 8px;
+        margin-right: 70px;
+        }
 h1 {
   color: #0077cc;
 }
