--- a/style1.css
+++ b/style1.css
@@ -57,6 +57,26 @@ features {
         border-radius: 8px;
         margin-right: 70px;
         }
+.dropdown-content {
+      display: none;
+      position: absolute;
+      background-color: #253012;
+      min-width: 160px;
+      z-index: 1;
+      top: 100%;
+      left: 0;
+      border-radius: 4px;
+      box-shadow: 0px 4px 8px rgba(0,0,0,0.2);
+    }
+.dropdown-content a {
+      display: block;
+      padding: 10px;
+      color: white;
+      text-decoration: none;
+    }
+.dropdown-content a:hover {
+      background-color: #3b4a21;
+    }
 h1 {
   color: #0077cc;
 }
