--- a/style1.css
+++ b/style1.css
@@ -34,6 +34,15 @@ nav a {
 nav a:hover {
   text-decoration: underline;
 }
+ nav a, .dropbtn {
+      color: white;
+      font-weight: bold;
+      text-decoration: none;
+      background: none;
+      border: none;
+      cursor: pointer;
+      font-size: 16px;
+    }
 features {
       display: flex;
       flex-wrap: wrap;
