--- a/style1.css
+++ b/style1.css
@@ -24,7 +24,14 @@ nav {
   padding: 10px;
   margin-bottom: 20px;
 }
-nav a, .dropbtn {
+nav a {
+  color: black;
+  text-decoration: none;
+  margin-right: 15px;
+  font-weight: bold;
+}
+
+.dropbtn {
       color: black;
       font-weight: bold;
       text-decoration: underline;
