--- a/style1.css
+++ b/style1.css
@@ -19,31 +19,52 @@ body {
   color: #182b0aff;
   font-family: 'Merriweather', serif;
 }
-nav {
-  background-color: #eeffc2;
-  padding: 10px;
-  margin-bottom: 20px;
-}
-nav a {
-  color: black;
-  text-decoration: none;
-  margin-right: 15px;
-  font-weight: bold;
-}
 
-.dropbtn {
-      color: black;
+ nav {
+      background-color: #182b0aff;
+      display: flex;
+      align-items: center;
+      padding: 10px 20px;
+      gap: 20px;
+    }
+
+    nav a, .dropbtn {
+      color: white;
       font-weight: bold;
-      text-decoration: underline;
+      text-decoration: none;
       background: none;
       border: none;
       cursor: pointer;
       font-size: 16px;
     }
 
-nav a:hover {
-  text-decoration: underline;
-}
+    .dropdown {
+      position: relative;
+    }
+
+    .dropdown-content {
+      display: none;
+      position: absolute;
+      background-color: #253012;
+      min-width: 160px;
+      z-index: 1;
+      top: 100%;
+      left: 0;
+      border-radius: 4px;
+      box-shadow: 0px 4px 8px rgba(0,0,0,0.2);
+    }
+
+    .dropdown-content a {
+      display: block;
+      padding: 10px;
+      color: white;
+      text-decoration: none;
+    }
+
+    .dropdown-content a:hover {
+      background-color: #3b4a21;
+    }
+
  
 features {
       display: flex;
@@ -68,30 +89,7 @@ features {
         border-radius: 8px;
         margin-right: 70px;
         }
- .dropdown {
-      position: relative;
-    }
 
-.dropdown-content {
-      display: none;
-      position: absolute;
-      background-color: #253012;
-      min-width: 160px;
-      z-index: 1;
-      top: 100%;
-      left: 0;
-      border-radius: 4px;
-      box-shadow: 0px 4px 8px rgba(0,0,0,0.2);
-    }
-.dropdown-content a {
-      display: block;
-      padding: 10px;
-      color: white;
-      text-decoration: none;
-    }
-.dropdown-content a:hover {
-      background-color: #3b4a21;
-    }
 h1 {
   color: #0077cc;
 }
