--- a/style-art.css
+++ b/style-art.css
@@ -53,6 +53,14 @@ nav {
       background-color: #3b4a21;
     }
 
+ footer {
+      background: #182b0aff;
+      font-family: 'Courier New', Courier, monospace;
+      color: white;
+      text-align: left;
+      padding: 15px;
+      margin-top: 40px;
+    }
 
 /* Headings */
 h1 {
