--- a/style-art.css
+++ b/style-art.css
@@ -64,6 +64,11 @@ nav {
 
 /* Headings */
 h1 {
+  font-family: Arial, sans-serif;
+  font-weight: bold;
+  font-size: 20px;
+  text-align: center;
+  padding: 50px;
   color: #213320;
 }
 
