--- a/style-art.css
+++ b/style-art.css
@@ -68,7 +68,6 @@ h1 {
 
 /* Paragraphs */
 p {
-  font-family: 'Segoe UI', sans-serif; /* Or another font like 'Georgia', 'Roboto' */
-
+  font-size: 1.1em;
   line-height: 1.6;
 }
