--- a/style-art.css
+++ b/style-art.css
@@ -67,7 +67,7 @@ h1 {
   color: #213320;
   font-family: Arial, sans-serif;
   font-weight: bold;
-  font-size: 20px;
+  font-size: 1.1em;
   text-align: center;
   padding: 50px;
 }
