--- a/style1.css
+++ b/style1.css
@@ -83,6 +83,7 @@ features {
       border-radius: 10px;
       box-shadow: 0 2px 5px rgba(0,0,0,0.1);
       text-align: center;
+      gap: 40px;
     }
 .feature img {
         width: 650px;
