--- a/style1.css
+++ b/style1.css
@@ -71,7 +71,7 @@ body {
       flex-wrap: wrap;
       justify-content: center;
       padding: 40px 20px;
-      background: #0b5dafff;
+      background: #f9f9f9;
     }
 .feature {
       max-width: 1000px;
