--- a/style1.css
+++ b/style1.css
@@ -68,6 +68,7 @@ body {
  
 .features {
       display: flex;
+      width: 100%;
       flex-wrap: wrap;
       justify-content: center;
       padding: 40px 700px;
