--- a/style1.css
+++ b/style1.css
@@ -139,7 +139,7 @@ footer p {
   width: 30px;
   height: 30px;
   margin: 0 10px;
-  vertical-align: middle;
+  vertical-align: right;
   transition: transform 0.3s ease;
 }
 
