--- a/style-art.css
+++ b/style-art.css
@@ -64,7 +64,7 @@ nav {
 /* Headings */
 h1 {
   color: #213320;
-  font-family: 'Arial', sans-serif;
+  font-family: 'Merriweather', serif;
   font-weight: bold;
   font-size: 35px;
   text-align: center;
