--- a/style-art.css
+++ b/style-art.css
@@ -60,6 +60,15 @@ nav {
       margin-top: 40px;
     }
 
+.article-image {
+  width: 100%;
+  max-width: 600px;
+  height: 400px;
+  display: block;
+  margin: 20px auto;
+  border-radius: 8px;
+}
+
 /* Headings */
 h1 {
   color: #213320;
