--- a/style1.css
+++ b/style1.css
@@ -123,7 +123,7 @@ footer p {
 .social-icon {
   width: 30px;
   height: 30px;
-  margin: 0 10px;
+  margin: 10px;
   vertical-align: right;
   transition: transform 0.3s ease;
 }
