--- a/style-art.css
+++ b/style-art.css
@@ -64,6 +64,14 @@ footer p {
   font-size: 1.1em;
 }
 
+.social-icon {
+  width: 30px;
+  height: 30px;
+  margin: 10px;
+  vertical-align: right;
+  transition: transform 0.3s ease;
+}
+
 .article-image {
   width: 100%;
   max-width: 600px;
