--- a/style1.css
+++ b/style1.css
@@ -89,7 +89,7 @@ body {
     }
 .feature img {
         width: 100px;
-        height: 50px;
+        height: 100px;
         border-radius: 8px;
         margin-right: 70px;
         align-items: left;
@@ -98,6 +98,7 @@ body {
 .feature-text {
   flex: 1;
   align-items: center;
+  font-family: 'Courier New', Courier, monospace;
   justify-content: right;
 }
 .feature-link {
