--- a/style1.css
+++ b/style1.css
@@ -1,7 +1,7 @@
 body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   background-color: #f9f9f9;
-  color: ##4c6b23;
+  color: #4c6b23;
   margin: 0;
   padding: 20px;
   text-align: center;
