--- a/style1.css
+++ b/style1.css
@@ -69,7 +69,7 @@ body {
 .features {
       display: flex;
       width: 1500px;
-      box-sizing: border-box;
+      height: 400px;
       flex-wrap: wrap;
       padding: 40px 20px;
       background: #f9f9f9;
