--- a/style1.css
+++ b/style1.css
@@ -69,7 +69,7 @@ body {
 .features {
       display: flex;
       width: 1500px;
-      height: 400px;
+      box-sizing: border-box;
       flex-wrap: wrap;
       padding: 40px 20px;
       background: #f9f9f9;
@@ -78,6 +78,7 @@ body {
 .feature {
       align-items: center;
       justify-content: center;
+      width: 900px;
       display: flex;
       background: white;
       margin: 10px auto;
