--- a/style1.css
+++ b/style1.css
@@ -94,6 +94,7 @@ body {
         }
 .feature-text {
   flex: 1;
+  margin-left: 20px;
   align-items: center;
   font-family: 'Courier New', Courier, monospace;
   justify-content: right;
