--- a/style-art.css
+++ b/style-art.css
@@ -93,7 +93,7 @@ h1 {
 
 /* Paragraphs */
 p {
-  background-color: #f1ffc9
+  background-color: #f1ffc9;
   font-size: 30px;
   text-align: center;
 }
