--- a/style1.css
+++ b/style1.css
@@ -78,7 +78,7 @@ body {
 .feature {
       width: 900px;
       display: flex;
-      background: white;
+      background-color: #f1ffc9;
       padding: 20px;
       border-radius: 10px;
       box-shadow: 0 2px 5px rgba(0,0,0,0.1);
