--- a/style1.css
+++ b/style1.css
@@ -82,6 +82,7 @@ body {
       padding: 20px;
       border-radius: 10px;
       box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      justify-content: center;
     }
 .feature img {
         width: 200px;
