--- a/style1.css
+++ b/style1.css
@@ -44,7 +44,9 @@ body {
 
     .dropdown-content {
       display: none;
-      position: relative;
+      position: absolute;
+      top: 100%;     /* Places it directly below the button */
+      left: 0;       /* Aligns it with the left edge of the button */
       background-color: #253012;
       min-width: 160px;
       z-index: 1;
