--- a/style-art.css
+++ b/style-art.css
@@ -102,7 +102,7 @@ p2{
   font-family: 'Merriweather', serif;
   font-weight: bold;
   font-size: 38px;
-  align-items: center;
+  text-align: center;
 }
 
 .p1{
