--- a/style1.css
+++ b/style1.css
@@ -53,6 +53,7 @@ body {
       z-index: 1;
       border-radius: 4px;
       box-shadow: 0px 4px 8px rgba(0,0,0,0.2);
+      align-items: center;
     }
 
     .dropdown-content a {
