--- a/style-art.css
+++ b/style-art.css
@@ -100,7 +100,7 @@ p {
 
 .p2{
   font-family: 'Merriweather', serif;
-  font-weight: bold;
+  font-weight: 200;
   font-size: 38px;
   text-align: center;
 }
