--- a/style1.css
+++ b/style1.css
@@ -90,7 +90,7 @@ body {
         border-radius: 8px;
         margin-right: 5px;
         align-items: left;
-        justify-content: center;
+        justify-content: left;
         }
 .feature-text {
   margin-left: 50px;
