--- a/style1.css
+++ b/style1.css
@@ -98,6 +98,16 @@ body {
   font-family: 'Courier New', Courier, monospace;
   justify-content: right;
 }
+
+.feature-text h2{
+  color: #182b0aff;
+  text-align: center;
+  font-family: 'Merriweather', serif;
+  font-weight: 200;
+  font-size: 38px;
+  text-align: center;
+}
+
 .feature-link {
   text-decoration: none;
   color: inherit;
