--- a/style-art.css
+++ b/style-art.css
@@ -26,18 +26,20 @@ nav {
 
     .dropdown {
       position: relative;
+      display: inline-block;
     }
 
     .dropdown-content {
       display: none;
       position: absolute;
+      top: 100%;     /* Places it directly below the button */
+      left: 0;       /* Aligns it with the left edge of the button */
       background-color: #253012;
       min-width: 160px;
       z-index: 1;
-      top: 100%;
-      left: 0;
       border-radius: 4px;
       box-shadow: 0px 4px 8px rgba(0,0,0,0.2);
+      align-items: center;
     }
 
     .dropdown-content a {
@@ -50,7 +52,6 @@ nav {
     .dropdown-content a:hover {
       background-color: #3b4a21;
     }
-
  footer {
       background: #182b0aff;
       font-family: 'Courier New', Courier, monospace;
