--- a/style1.css
+++ b/style1.css
@@ -78,7 +78,7 @@ body {
     }
 .feature {
       width: 1200px;
-      display: flex;
+      display: absolute;
       background-color: #f1ffc9;
       padding: 20px;
       border-radius: 10px;
