--- a/style1.css
+++ b/style1.css
@@ -77,6 +77,7 @@ body {
 .feature {
       width: 1200px;
       display: flex;
+      align-items: center;
       background-color: #f1ffc9;
       padding: 20px;
       border-radius: 10px;
