--- a/style-art.css
+++ b/style-art.css
@@ -1,7 +1,7 @@
 /* General body styling */
 body {
   background-color: #f9f9f9;
-  color: #333;
+  color: #4c6b23;
   margin: 0;
   padding: 20px;
 }
