--- a/style1.css
+++ b/style1.css
@@ -26,6 +26,7 @@ body {
       align-items: center;
       padding: 10px 20px;
       gap: 20px;
+      margin-bottom: 40px;
     }
 
     nav a, .dropbtn {
