--- a/style1.css
+++ b/style1.css
@@ -80,6 +80,7 @@ body {
       align-items: center;
       background-color: #f1ffc9;
       padding: 20px;
+      margin-bottom: 10px
       border-radius: 10px;
       box-shadow: 0 2px 5px rgba(0,0,0,0.1);
     }
