--- a/style1.css
+++ b/style1.css
@@ -156,3 +156,10 @@ p {
   line-height: 1.6;
   margin-bottom: 15px;
 }
+h {
+  font-size: 2em;
+  font-weight: 400;
+  margin-bottom: 10px;
+  color: #182b0aff;
+  font-family: 'Merriweather', serif;
+}
