--- a/style1.css
+++ b/style1.css
@@ -163,3 +163,10 @@ h {
   color: #182b0aff;
   font-family: 'Merriweather', serif;
 }
+p1{
+  font-size: 1em;
+  font-weight: 400;
+  margin-bottom: 10px;
+  color: #182b0aff;
+  font-family: 'Merriweather', serif;
+}
