--- a/style-art.css
+++ b/style-art.css
@@ -110,7 +110,7 @@ p {
 
 .p1{
   display: flex;
-  justify-content: center;
+  align-items: center;
   background-color: #f1ffc9;
   margin-bottom: 10px;
 }
