--- a/style-art.css
+++ b/style-art.css
@@ -111,7 +111,7 @@ p {
 
 .p1{
   display: flex;
-  align-items: center;
+  justify-content: center;
   background-color: #f1ffc9;
   margin-bottom: 10px;
   width: 700px;
