--- a/style-art.css
+++ b/style-art.css
@@ -9,11 +9,15 @@ body {
 }
 
 nav {
-      background-color: #182b0aff;
-      display: flex;
-      align-items: center;
-      padding: 10px 20px;
-      gap: 20px;
+  position: sticky;
+  top: 0;
+  background-color: #182b0aff;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px 20px;
+  gap: 20px;
+  z-index: 1000; /* stays above all content */
     }
 
     nav a, .dropbtn {
