--- a/style1.css
+++ b/style1.css
@@ -22,12 +22,14 @@ body {
 
  nav {
       position: sticky;
+      top: 0;
       background-color: #182b0aff;
       display: flex;
       align-items: center;
       padding: 10px 20px;
       gap: 20px;
       margin-bottom: 40px;
+      justify-content: left;
     }
 
     nav a, .dropbtn {
