--- a/style1.css
+++ b/style1.css
@@ -16,7 +16,7 @@ body {
   font-size: 5em;
   font-weight: 400;
   margin-bottom: 10px;
-  color: #182b0aff;
+  color: #f9f9f9;
   font-family: 'Merriweather', serif;
 }
 
