--- a/style-art.css
+++ b/style-art.css
@@ -122,6 +122,7 @@ p {
   align-items: center;
   text-align: center;
   background-color: #f1ffc9;
+  margin-top: 10px;
   margin-bottom: 10px;
   width: 700px;
 }
