--- a/style-art.css
+++ b/style-art.css
@@ -114,13 +114,13 @@ p {
   font-weight: 200;
   font-size: 38px;
   text-align: center;
+  margin-bottom: 10px;
 }
 
 .p1{
   display: flex;
   justify-content: center;
   align-items: center;
-  text-align: center;
   background-color: #f1ffc9;
   margin-top: 10px;
   margin-bottom: 10px;
