--- a/style1.css
+++ b/style1.css
@@ -21,15 +21,17 @@ body {
 }
 
  nav {
-      position: sticky;
-      top: 0;
-      background-color: #182b0aff;
-      display: flex;
-      align-items: center;
-      padding: 10px 20px;
-      gap: 20px;
-      margin-bottom: 40px;
-      justify-content: left;
+  position: sticky;
+  top: 0;
+  background-color: #182b0aff;
+  display: flex;
+  align-items: center;
+  padding: 10px 20px;
+  gap: 20px;
+  margin-bottom: 20px;
+  margin-top: 20px;
+  justify-content: left;
+ 
     }
 
 nav a, .dropbtn {
@@ -70,7 +72,6 @@ nav a, .dropbtn {
     .dropdown-content a:hover {
       background-color: #3b4a21;
     }
-
  
 .features {
       display: flex;
