--- a/style1.css
+++ b/style1.css
@@ -47,6 +47,7 @@ nav a, .dropbtn {
     .dropdown {
       position: relative;
       display: inline-block;
+      left: 0;  
     }
 
     .dropdown-content {
