--- a/docs/about/style-art.css
+++ b/docs/about/style-art.css
@@ -98,7 +98,7 @@ h1 {
   font-family: 'Merriweather', serif;
   font-weight: bold;
   font-size: 55px;
-  text-align: left;
+  text-align: center;
   padding: 30px;
   text-decoration: underline;
 }
