--- a/docs/about/style-art.css
+++ b/docs/about/style-art.css
@@ -3,7 +3,7 @@ body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   background-color: #f9f9f9;
   color: #4c6b23;
-  margin: 0;
+  margin: 0 auto;
   padding: 20px;
   justify-content: center;
   align-items: center;
@@ -68,17 +68,17 @@ nav a, .dropbtn {
       color: white;
       text-align: left;
       padding: 15px;
-      margin-top: 40px;
+      margin-top: 40px auto;
     }
 footer p {
-  margin-bottom: 10px;
+  margin: 10px auto;;
   font-size: 1.1em;
 }
 
 .social-icon {
   width: 30px;
   height: 30px;
-  margin: 10px;
+  margin: 10px auto;
   vertical-align: right;
   transition: transform 0.3s ease;
 }
@@ -101,6 +101,7 @@ h1 {
   text-align: center;
   padding: 30px;
   text-decoration: underline;
+  margin: 10px auto;
 }
 
 /* Paragraphs */
@@ -108,6 +109,7 @@ p {
   font-size: 30px;
   text-align: left;
   justify-content: center;
+  margin: 10px auto;
 }
 
 .p2{
@@ -115,7 +117,7 @@ p {
   font-weight: 200;
   font-size: 38px;
   text-align: center;
-  margin-bottom: 10px;
+  margin: 10px auto;
 }
 
 .p1{
@@ -129,5 +131,4 @@ p {
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Optional for visual depth */
   width: 90%;
   max-width: 700px;
-  margin: 10px auto;
 }
