--- a/docs/about/style-art.css
+++ b/docs/about/style-art.css
@@ -79,7 +79,7 @@ footer p {
   width: 30px;
   height: 30px;
   margin: 10px auto;
-  vertical-align: right;
+  vertical-align: center;
   transition: transform 0.3s ease;
 }
 
