--- a/docs/beginner-watches/style.css
+++ b/docs/beginner-watches/style.css
@@ -178,7 +178,9 @@ p1{
 
 .watch-content{
   background: #f9f9f9;
-      justify-content: center;
+  justify-content: center;
+  margin: 0 auto;
+  width: 700px;  
 }
 
 .p2{
