--- a/docs/beginner-watches/style.css
+++ b/docs/beginner-watches/style.css
@@ -81,19 +81,23 @@ nav a, .dropbtn {
       color: white;
       text-align: left;
       padding: 0px;
-      margin: 15px auto;
+      margin: 0px auto;
+      max-width: 700px;
     }
 
 footer p {
   margin: 10px auto;
   font-size: 1.1em;
+  justify-content: center;
+  align-items: left;
 }
 
 .social-icon {
   width: 30px;
   height: 30px;
-  margin: 10px;
-  vertical-align: right;
+  margin: 10px auto;
+  justify-content: centert;
+  align-items: right;
   text-decoration: none;
   transition: transform 0.3s ease;
 }
