--- a/docs/beginner-watches/style.css
+++ b/docs/beginner-watches/style.css
@@ -118,7 +118,7 @@ p {
   font-size: 1.1em;
   line-height: 1.6;
   margin-bottom: 15px;
-  align-text: left;
+  text-align: left;
   margin: 0px auto;
   width: 700px;  
 }
