--- a/docs/beginner-watches/style.css
+++ b/docs/beginner-watches/style.css
@@ -128,8 +128,9 @@ h {
   margin-bottom: 15px;
   color: #182b0aff;
   font-family: 'Merriweather', serif;
-  margin: 30px auto;
+  margin: 20px auto;
   width: 700px;  
+  padding: 20px;
 }
 p1{
   font-size: 1.6em;
