--- a/docs/beginner-watches/style.css
+++ b/docs/beginner-watches/style.css
@@ -77,6 +77,12 @@ nav a, .dropbtn {
  footer {
       background: #182b0aff;
       font-family: 'Courier New', Courier, monospace;
+      background-color: #182b0aff;
+      display: flex;
+      align-items: center;
+      padding: 10px 20px;
+      gap: 20px;
+      margin: 0px auto;
       justify-content: left;
       color: white;
       padding: 0px;
