--- a/docs/illusion-of-luxury/style.css
+++ b/docs/illusion-of-luxury/style.css
@@ -16,6 +16,7 @@ body {
 .hero h1 {
   font-size: 5em auto;
   font-weight: 400 auto;
+  text-align: left;
   margin: 10 auto;
   color: #182b0aff;
   font-family: 'Merriweather', serif;
