--- a/docs/illusion-of-luxury/style.css
+++ b/docs/illusion-of-luxury/style.css
@@ -14,8 +14,8 @@ body {
 }
 
 .hero h1 {
-  font-size: 5em auto;
-  font-weight: 400 auto;
+  font-size: 45px;
+  font-weight: 400;
   text-align: left;
   margin: 10 auto;
   color: #182b0aff;
