--- a/docs/beginner-watches/style.css
+++ b/docs/beginner-watches/style.css
@@ -73,27 +73,19 @@ nav a, .dropbtn {
     .dropdown-content a:hover {
       background-color: #3b4a21;
     }
- 
- footer {
+
+footer {
       background: #182b0aff;
       font-family: 'Courier New', Courier, monospace;
-      background-color: #182b0aff;
-      display: flex;
-      align-items: center;
-      padding: 10px 20px;
-      gap: 20px;
-      margin: 0px auto;
-      justify-content: left;
       color: white;
-      padding: 0px;
-      margin: 0px auto;
+      text-align: left;
+      padding: 15px;
+      margin-top: 40px;
     }
 
 footer p {
-  margin: 10px auto;
+  margin-bottom: 10px;
   font-size: 1.1em;
-  justify-content: center;
-  align-items: left;
 }
 
 .social-icon {
