--- a/docs/beginner-watches/style.css
+++ b/docs/beginner-watches/style.css
@@ -29,7 +29,7 @@ body {
   align-items: center;
   padding: 10px 20px;
   gap: 20px;
-  margin: 0px auto;
+  margin: 10px auto;
   justify-content: left;
  
     }
@@ -80,6 +80,7 @@ footer {
       color: white;
       text-align: left;
       padding: 15px;
+      margin: 0px auto;
       margin-top: 40px;
     }
 
@@ -91,8 +92,8 @@ footer p {
 .social-icon {
   width: 30px;
   height: 30px;
-  margin: 10px auto;
-  justify-content: centert;
+  margin: 10px;
+  justify-content: center;
   align-items: right;
   text-decoration: none;
   transition: transform 0.3s ease;
