--- a/docs/beginner-watches/style.css
+++ b/docs/beginner-watches/style.css
@@ -5,21 +5,23 @@ body {
   padding: 20px;
   text-align: center;
 }
+
 .hero {
   background-color: #f9f9f9;
-  padding: 60px 20px;
-  text-align: center;
-  max-width: 700px;
+  justify-content: center;
+  align-items:center;
   margin: 0 auto;
+  width: 1000px;
 }
 
 .hero h1 {
-  font-size: 5em;
+  font-size: 55px;
   font-weight: 400;
-  margin: 30px auto;
+  margin: 0 auto;
   color: #182b0aff;
   font-family: 'Merriweather', serif;
 }
+
 
  nav {
   position: sticky;
