--- a/docs/beginner-watches/style.css
+++ b/docs/beginner-watches/style.css
@@ -114,8 +114,15 @@ footer p {
   border-radius: 8px;
 }
 
+.content{
+  justyfy-content: center;
+  align-items: center;
+  width: 1000px;
+  margin: 0px auto;
+}
+
 /* Paragraphs */
-p {
+.content p {
   font-size: 1.1em;
   line-height: 1.6;
   margin-bottom: 15px;
@@ -123,7 +130,8 @@ p {
   margin: 0px auto;
   width: 700px;  
 }
-h {
+
+.content h {
   font-size: 2em;
   font-weight: 400;
   color: #182b0aff;
