--- a/docs/beginner-watches/style.css
+++ b/docs/beginner-watches/style.css
@@ -130,7 +130,7 @@ footer p {
   margin: 0px auto;
 }
 
-.content h {
+.content h1 {
   font-size: 2em;
   font-weight: 400;
   color: #182b0aff;
@@ -138,6 +138,15 @@ footer p {
   margin: 10px auto;
   text-align: left;
 }
+h1{
+  font-size: 2em;
+  font-weight: 400;
+  color: #182b0aff;
+  font-family: 'Merriweather', serif;
+  margin: 10px auto;
+  text-align: left;
+}
+  
 p1{
   font-size: 1.6em;
   font-weight: 400;
