--- a/docs/beginner-watches/style.css
+++ b/docs/beginner-watches/style.css
@@ -138,13 +138,14 @@ footer p {
   margin: 10px auto;
   text-align: left;
 }
-h1{
+h {
   font-size: 2em;
   font-weight: 400;
   color: #182b0aff;
   font-family: 'Merriweather', serif;
   margin: 10px auto;
   text-align: left;
+  
 }
   
 p1{
