--- a/docs/css/style1.css
+++ b/docs/css/style1.css
@@ -84,10 +84,11 @@ nav a, .dropbtn {
     }
 .feature {
       width: 1200px;
+      height: 200px;
       display: flex;
       align-items: center;
       background-color: #f1ffc9;
-      padding: 20px auto;
+      padding: 0px auto;
       margin-bottom: 10px;
       border-radius: 10px;
       box-shadow: 0 2px 5px rgba(0,0,0,0.1);
