--- a/docs/beginner-watches/style.css
+++ b/docs/beginner-watches/style.css
@@ -7,10 +7,10 @@ body {
 }
 
 .hero {
+  display: flex;
   background-color: #f9f9f9;
   justify-content: center;
   align-items:center;
-  margin: 0 auto;
   width: 1000px;
 }
 
