--- a/docs/beginner-watches/style.css
+++ b/docs/beginner-watches/style.css
@@ -1,29 +1,25 @@
 body {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  background-color: #f9f9f9;
+  color: #4c6b23;
   margin: 0;
-  font-family: 'Merriweather', serif;
-  background-color: #f4f4f4;
-}
-
-/* Hero section full-screen and centered */
-.hero {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100vh; /* Full height of viewport */
   padding: 20px;
-  text-align: center;
-  background-color: #ffffff; /* Optional: light background */
-  box-sizing: border-box;
+}
+.hero {
+  background-color: #f9f9f9;
+  justify-content: center;
+  align-items:center;
+  margin: 0 auto;
+  width: 1000px;
 }
 
-/* Heading styles */
 .hero h1 {
-  font-size: 2.5rem;
-  color: #222;
-  max-width: 800px;
-  line-height: 1.4;
+  font-size: 55px;
+  font-weight: 400;
+  margin: 0 auto;
+  color: #182b0aff;
+  font-family: 'Merriweather', serif;
 }
-
 
  nav {
   position: sticky;
