--- a/docs/beginner-watches/style.css
+++ b/docs/beginner-watches/style.css
@@ -141,7 +141,7 @@ h1 {
   color: #182b0aff;
   font-family: 'Merriweather', serif;
   margin: 10px auto;
-  text-align: left;
+  text-align: center;
   
 }
   
