--- a/docs/home/style.css
+++ b/docs/home/style.css
@@ -2,7 +2,7 @@ body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   background-color: #f9f9f9;
   color: #4c6b23;
-  margin: 0;
+  margin: 0 auto;
   padding: 20px;
   text-align: center;
 }
@@ -10,6 +10,7 @@ body {
   background-color: #f9f9f9;
   padding: 60px 20px;
   text-align: center;
+  margin: 0 auto;
 }
 
 .hero h1 {
@@ -28,9 +29,10 @@ body {
   align-items: center;
   padding: 10px 20px;
   gap: 20px;
-  margin-bottom: 20px;
-  margin-top: 20px;
+  margin-bottom: 20px auto;
+  margin-top: 20px auto;
   justify-content: left;
+  margin: 0 auto;
  
     }
 
@@ -78,13 +80,15 @@ nav a, .dropbtn {
       display: flex;
       background: #f9f9f9;
       justify-content: center;
+      margin: 0 auto;
     }
 .feature {
       width: 1200px;
+      height: 200px;
       display: flex;
       align-items: center;
       background-color: #f1ffc9;
-      padding: 20px;
+      padding: 0px auto;
       margin-bottom: 10px;
       border-radius: 10px;
       box-shadow: 0 2px 5px rgba(0,0,0,0.1);
@@ -92,13 +96,14 @@ nav a, .dropbtn {
 .feature img {
         width: 200px;
         height: 200px;
-        border-radius: 8px;
-        margin-right: 20px;
+        border-radius: 8px ;
+        margin-right: 20px ;
         align-items: left;
         justify-content: left;
         }
 .feature-text {
-  margin-left: 50px;
+  margin-left: 20px auto;
+  width: 900px;
   align-items: center;
   font-family: 'Courier New', Courier, monospace;
   justify-content: right;
@@ -111,6 +116,7 @@ nav a, .dropbtn {
   font-weight: 200;
   font-size: 38px;
   text-align: center;
+  margin: 0 auto;
 }
 
 .feature-link {
@@ -125,11 +131,12 @@ nav a, .dropbtn {
       color: white;
       text-align: left;
       padding: 15px;
-      margin-top: 40px;
+      margin-top: 40px auto;
+      margin: 0 auto;
     }
 
 footer p {
-  margin-bottom: 10px;
+  margin-bottom: 10px auto;
   font-size: 1.1em;
 }
 
