--- a/docs/contact/style.css
+++ b/docs/contact/style.css
@@ -35,6 +35,7 @@ body {
     }
 
 nav a, .dropbtn {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       color: white;
       font-weight: bold;
       text-decoration: none;
